k8s-rpi-apps-invidious/novpn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious-ingress
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
spec:
  ingressClassName: nginx
  rules:
    - host: <invidioushostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: invidious
              port:
                number: 3000
